--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>about</title>
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+	<ul class="nevbar">
+  		<li class="nevbarli"><a class="active" class="nevbarli_a" href="{{ url_for(home.html)}}">Home</a></li>
+  		<li class="nevbarli"><a class="nevbarli_a" href="{{ url_for(srote.html)}}">store</a></li>
+  		<li class="nevbarli"><a class="nevbarli_a"href="{{ url_for(about.html)}}">About</a></li>
+  	</ul>
+  	<h1>sorry i have no time</h1>
+  	<h2>
+  		hi  about us
+  	</h2>
+  	<p>bla bla bla bl bla bla bla bla bla bla</p>
 
 
 </body>
