--- a/templates/store.html
+++ b/templates/store.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>store</title>
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+	<ul class="nevbar">
+  		<li class="nevbarli"><a class="active" class="nevbarli_a" href="{{ url_for(home.html)}}">Home</a></li>
+  		<li class="nevbarli"><a class="nevbarli_a" href="{{ url_for(srote.html)}}">store</a></li>
+  		<li class="nevbarli"><a class="nevbarli_a"href="{{ url_for(about.html)}}">About</a></li>
+  	</ul>
+
+
 
 
 </body>
