need to work at home

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	<ul class="nevbar">
-  		<li class="nevbarli"><a class="active" class="nevbarli_a" href="{{ url_for(home.html)}}">Home</a></li>
-  		<li class="nevbarli"><a class="nevbarli_a" href="{{ url_for(srote.html)}}">store</a></li>
-  		<li class="nevbarli"><a class="nevbarli_a"href="{{ url_for(about.html)}}">About</a></li>
-  	</ul>
+		<li class="nevbarli"><a class="nevbarli_a" href="{{ url_for('home')}}">Home</a></li>
+		<li class="nevbarli"><a class="nevbarli_a" href="{{ url_for('store')}}">store</a></li>
+		<li class="nevbarli"><a class="nevbarli_a"href="{{ url_for('about')}}">About</a></li>
+	</ul>
   	<h1>sorry i have no time</h1>
   	<h2>
   		hi  about us
