--- a/static/stayle.css
+++ b/static/stayle.css
@@ -25,10 +25,7 @@
 .active {
   background-color: #4CAF50;
 }
-.footer {
-  background-color: #f2f2f2;
-  padding: 25px;
-}
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
@@ -52,4 +49,8 @@
   cursor: pointer;
   width: 100%;
   font-size: 18px;
+}
+
+.card button:hover {
+  opacity: 0.7;
 }
