--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>cart</title>
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+	<ul class="nevbar">
+		<li class="nevbarli"><a class="nevbarli_a" href="{{ url_for('home')}}">Home</a></li>
+		<li class="nevbarli"><a class="nevbarli_a" href="{{ url_for('store')}}">store</a></li>
+		<li class="nevbarli"><a class="nevbarli_a"href="{{ url_for('about')}}">About</a></li>
+		<li class="nevbarli"><a class="nevbarli_a"href="{{ url_for('cart')}}">Carts</a></li>
+	</ul>
 
 <!-- Delete this section when you reach this file -->
 <h1 style="font-size: 55px;position: absolute;left: 41.5%;top:28%">Cart Function</h1>
 <h1 style="font-size: 70px;position: absolute;left: 40%;bottom:50%">Coming Soon</h1>
+			{% for Cart in carts%}
+			<div class="card" >
+				<h1>{{Cart.name_cart}}</h1>
+				<p class="price">{{Carts.price_cart}}$</p>
+			</div>
+			{% endfor %}
+
 <!-- ------------------ -->
 
 </body>
