--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,8 @@
 		<li class="nevbarli"><a class="nevbarli_a" href="{{ url_for('home')}}">Home</a></li>
 		<li class="nevbarli"><a class="nevbarli_a" href="{{ url_for('store')}}">store</a></li>
 		<li class="nevbarli"><a class="nevbarli_a"href="{{ url_for('about')}}">About</a></li>
+		<li class="nevbarli"><a class="nevbarli_a"href="{{ url_for('cart')}}">Carts</a></li>
+
 	</ul>
 	<h1>hi doing it super fast i deleted everything</h1>
 
