--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,7 @@
 		<li class="nevbarli"><a class="nevbarli_a" href="{{ url_for('store')}}">store</a></li>
 		<li class="nevbarli"><a class="nevbarli_a"href="{{ url_for('about')}}">About</a></li>
 		<li class="nevbarli"><a class="nevbarli_a"href="{{ url_for('cart')}}">Carts</a></li>
+		<li class="nevbarli"><a class="nevbarli_a" href="{{ url_for('login')}}">login</a></li>
 
 	</ul>
 	<h1>hi doing it super fast i deleted everything</h1>
