--- a/templates/cart.html
+++ b/templates/cart.html
@@ -10,15 +10,15 @@
 		<li class="nevbarli"><a class="nevbarli_a" href="{{ url_for('store')}}">store</a></li>
 		<li class="nevbarli"><a class="nevbarli_a"href="{{ url_for('about')}}">About</a></li>
 		<li class="nevbarli"><a class="nevbarli_a"href="{{ url_for('cart')}}">Carts</a></li>
+		<li class="nevbarli"><a class="nevbarli_a" href="{{ url_for('login')}}">login</a></li>
 	</ul>
 
 <!-- Delete this section when you reach this file -->
-<h1 style="font-size: 55px;position: absolute;left: 41.5%;top:28%">Cart Function</h1>
-<h1 style="font-size: 70px;position: absolute;left: 40%;bottom:50%">Coming Soon</h1>
+
 			{% for Cart in carts%}
 			<div class="card" >
 				<h1>{{Cart.name_cart}}</h1>
-				<p class="price">{{Carts.price_cart}}$</p>
+				<p class="price">{{Cart.price_cart}}$</p>
 			</div>
 			{% endfor %}
 
